# ExpandingBEC2D

./: .gitignore  2dexpan.h  61vor.cpp  61vor_aspect.cpp  CMakeLists.txt  TODO  bh3cuda.cpp  bh3movie.cpp  bh3myanalyzerun.cpp  bh3myanalyzerun_thorge.cpp  complex_explained.txt  contour.py  evaluator.cpp  expandingvortexgas2d.sublime-project  expandingvortexgas2d.sublime-workspace  itp.cpp  main.cpp  main.cpp_backup  main.cpp_bh3myanalyzerun  main.kdev4  mycudaread.cpp  openquestions.txt  plot.py  plotter.cpp  run.cfg  runlog.py  sim.cfg  split3d.cpp  tester.cpp  vortices.py
bh3propagators_version2(von thorge)/: #bh3cudapropagator.cu#  Makefile~  bh3cpuomppropagator.cpp~  bh3cpuomppropagator.h  bh3cpupropagator.cpp  bh3cpupropagator.cpp~  bh3cpupropagator.h~  bh3cudapropagator.cu~  bh3cudapropagator.h~  bh3fastcpupropagator.cpp~  bh3fastcpupropagator.h~  bh3fastcudapropagator.cu  bh3fastcudapropagator.cu~  bh3fastcudapropagator.h  bh3fastcudapropagator.h~  bh3fastcudapropagator.ptx  bh3propagator.cpp  bh3propagator.cpp~  bh3propagator.h~
exp_utilities/: 2dexpan.h  EXP2D_Contour.cpp  EXP2D_Contour.h  EXP2D_MatrixData.h  EXP2D_binaryfile.cpp  EXP2D_binaryfile.h  EXP2D_evaluation.cpp  EXP2D_evaluation.h  EXP2D_itp.cpp  EXP2D_itp.hpp  EXP2D_lmfitter.cpp  EXP2D_lmfitter.h  EXP2D_matrixData.h  EXP2D_observables.cpp  EXP2D_observables.h  EXP2D_plotter.cpp  EXP2D_plotter.hpp  EXP2D_propagators.cpp  EXP2D_propagators.h  EXP2D_rk4.cpp  EXP2D_rk4.hpp  EXP2D_rte.cpp  EXP2D_rte.hpp  EXP2D_runner.hpp  EXP2D_splitstep.cpp  EXP2D_splitstep.hpp  EXP2D_startgrids.h  EXP2D_tools.cpp  EXP2D_tools.h  exp_RK4_tools.cpp  exp_RK4_tools.h  hydro.cpp  hydro.h  main.h  plot_with_mgl.cpp  plot_with_mgl.h  pythonplot.h  tester.h  vortexcoordinates.h
observables/: Makefile  Makefile~  bh3observables.cpp~  bh3observables.h~  bh3save.cpp  bh3save.cpp~
propagators/: .directory  Makefile  Makefile~  bh3cpupropagator.cpp  bh3cpupropagator.h  bh3cuda1Dpropagator.cu~  bh3cuda1Dpropagator.h~  bh3cudapropagator.cu  bh3cudapropagator.cu~  bh3cudapropagator.h  bh3cudapropagator.h~  bh3fastcpupropagator.cpp  bh3propagator.cpp  bh3propagator.cpp~  bh3propagator.h  bh3propagator.h~
pythonScripts/: AveragesPlot.py  Ratios.py  angles.py  eval.py  hydroplots.py  plot.py  ratiosPlot.py  solver.cpp  test.py  unitConverter.py  vortices.py  vortices_rot.py  vortices_trap.py
resources/: bh3myanalyzerun_thorge.cpp  sample.cfg  testRTE54
resources/bh3propagators_version2(von thorge)/: Makefile  bh3cpuomppropagator.cpp  bh3fastcpupropagator.h
solver/: solver.cpp
src/: EXP2D_Contour.h  EXP2D_binaryfile.h  EXP2D_coordinate.h  EXP2D_evaluation.cpp  EXP2D_evaluation.h  EXP2D_lmfitter.cpp  EXP2D_lmfitter.h  EXP2D_observables.h  EXP2D_plotter.hpp  EXP2D_rk4.hpp  EXP2D_runner.hpp  EXP2D_splitstep.cpp  EXP2D_splitstep.hpp  EXP2D_startgrids.h  EXP2D_tools.cpp  EXP2D_tools.h  binaryfile.cpp  binaryfile.h  constants.h  contour.cpp  contour.h  coordinate.h  evaluation.cpp  evaluation.h  gauss_random.cpp  hydro.cpp  hydro.h  lmfitter.cpp  lmfitter.h  main.h  matrixdata.h  observables.h  plot_with_mgl.cpp  plot_with_mgl.h  plotter.cpp  plotter.h  plotter.hpp  rk4.cpp  rk4.h  rk4.hpp  (+8 more)
src/.archive/: EXP2D_itp.hpp  evaluator.cpp  fit2dgaussian.c
src/.archive/observables/: bh3observables.cpp  bh3observables.h  bh3save.h
src/.archive/propagators/: #bh3cudapropagator.h#  bh3propagator.cpp
src/.archive/resources/: exp2d-obs-line-of-codes.cpp  offset_tracking.cpp
src/.archive/resources/bh3propagators_version2(von thorge)/: bh3cudapropagator.h
src/.archive/startgrids/: bh3defaultgrid.cpp  bh3defaultgrid.h
src/.archive/utilities/: bench_time.h  bh3binaryfile.cpp  coordinate.h  cudacomplexgrid.cu  cudacomplexgrid.h  cudarealgrid.h  gauss_random.cpp  realgrid.cpp  realgrid.h  wrapped_cuda_functions.h
startgrids/: Makefile  Makefile~  bh3defaultgrid.cpp  bh3defaultgrid.cpp~  bh3defaultgrid.h  bh3defaultgrid.h~
utilities/: Makefile  averageclass.h  bench_time.h  bh3binaryfile.cpp~  bh3binaryfile.h  bh3binaryfile_new.cpp  bh3binaryfile_new.h  complexgrid.cpp  complexgrid.h  coordinate.h  cudarealgrid.cu  gauss_random.h  realgrid.cpp
